--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Compiler files
-cache/
+cache*/
 out/
 
 # Ignores development broadcast logs
@@ -12,3 +12,15 @@ docs/
 
 # Dotenv file
 .env
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
